commit : finished the validation.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -10,6 +10,10 @@ required				= {0} is required.
 successfully.save		= Successfully Save.
 successfully.edit		= Successfully Edit.
 
+#Validation messages	********************************************
+
+
+
 #Placeholder			********************************************
 placeHolder 			= Enter the {0}
 cboPlaceHolder 			= Select the {0}
@@ -21,20 +25,25 @@ cboPlaceHolder 			= Select the {0}
 lblEmailSecurity		= We'll never share your email with anyone else.
 lblForgotPassword		= Forgot Password
 
+lblEmail				= Email
+lblFirstName			= First Name
+lblLastName				= Last Name
 lblNewPassword 			= New Password
+lblPassword				= Password
 lblConfirmPassword 		= Confrim Password
 lblCurrentPassword 		= Current Password
-lblEmail				= Email
-lblPassword				= Password
 
 
 #Button					********************************************
 btnLogin				= Login
 
 #Entity & Model 		********************************************
-
+firstName				= First Name
+lastName				= Last Name
 email 					= Email
 password				= Password
 newPassword				= New Password
 confirmPassword			= Confirm Password
 currentPassword			= Current Password
+
+
