commit : adding the validation for the registeration process.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -11,8 +11,8 @@ successfully.save		= Successfully Save.
 successfully.edit		= Successfully Edit.
 
 #Validation messages	********************************************
-
-
+confirmPassword.notMismatch = Confirm Password does not mismatch.
+email.already.registered	= Email is already registered.
 
 #Placeholder			********************************************
 placeHolder 			= Enter the {0}
