commit :editing the validation process.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -7,10 +7,12 @@ japanese				= JP
 
 #Paramter messages		********************************************
 required				= {0} is required.
+
 successfully.save		= Successfully Save.
 successfully.edit		= Successfully Edit.
+successfully.register	= Registeration successful. Cehck your email for confirmation and activation your account.
 
-#Validation messages	********************************************
+#error messages			********************************************
 confirmPassword.notMismatch = Confirm Password does not mismatch.
 email.already.registered	= Email is already registered.
 
