--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -15,6 +15,8 @@ successfully.register	= Registeration successful. Cehck your email for confirmat
 #error messages			********************************************
 confirmPassword.notMismatch = Confirm Password does not mismatch.
 email.already.registered	= Email is already registered.
+email.invalid			= Invalid Email
+password.invalid		= Password must be 8 or more characters in length., Password must contain 1 or more uppercase characters., Password must contain 1 or more digit characters., Password must contain 1 or more special characters. 
 
 #Placeholder			********************************************
 placeHolder 			= Enter the {0}
