commit : Account Registration and Activation finished.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -8,15 +8,18 @@ japanese				= JP
 #Paramter messages		********************************************
 required				= {0} is required.
 
-successfully.save		= Successfully Save.
-successfully.edit		= Successfully Edit.
-successfully.register	= Registeration successful. Cehck your email for confirmation and activation your account.
+success.save		= Successfully Save.
+success.edit		= Successfully Edit.
+success.register	= Registeration successful. Cehck your email for confirmation and activation your account.
+success.register.confirmation = Register Activation Successful!
 
 #error messages			********************************************
 confirmPassword.notMismatch = Confirm Password does not mismatch.
 email.already.registered	= Email is already registered.
 email.invalid			= Invalid Email
 password.invalid		= Password must be 8 or more characters in length., Password must contain 1 or more uppercase characters., Password must contain 1 or more digit characters., Password must contain 1 or more special characters. 
+
+error.register.confirmation = Register Activation was expired. Please, register one more time!
 
 #Placeholder			********************************************
 placeHolder 			= Enter the {0}
