commit : adding the new initial password change pages.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -1,56 +1,56 @@
 # Security Messages
-badCredentials 			= Please enter the correct password.
+badCredentials 								= Please enter the correct password.
 
-#Internationalization
-english					= EN
-japanese				= JP
+#Internationalization					
+english										= EN
+japanese									= JP
 
-#Paramter messages		********************************************
-required				= {0} is required.
+#Paramter messages		****************************************************************************************
+required									= {0} is required.
 
-success.save		= Successfully Save.
-success.edit		= Successfully Edit.
-success.register	= Registeration successful. Cehck your email for confirmation and activation your account.
-success.register.confirmation = Register Activation Successful!
+success.save								= Successfully Save.
+success.edit								= Successfully Edit.
+success.register							= Registeration successful. Cehck your email for confirmation and activation your account.
+success.register.confirmation 				= Register Activation Successful!
 
-#error messages			********************************************
-confirmPassword.notMismatch = Confirm Password does not mismatch.
-email.already.registered	= Email is already registered.
-email.invalid			= Invalid Email
-password.invalid		= Password must be 8 or more characters in length., Password must contain 1 or more uppercase characters., Password must contain 1 or more digit characters., Password must contain 1 or more special characters. 
+#error messages			****************************************************************************************
+confirmPassword.notMismatch					= Confirm Password does not mismatch.
+email.already.registered					= Email is already registered.
+email.invalid								= Invalid Email
+password.invalid							= Password must be 8 or more characters in length., Password must contain 1 or more uppercase characters., Password must contain 1 or more digit characters., Password must contain 1 or more special characters. 
 
-error.register.confirmation = Register Activation was expired. Please, register one more time!
+error.register.confirmation					= Register Activation was expired. Please, register one more time!
 
-#Placeholder			********************************************
-placeHolder 			= Enter the {0}
-cboPlaceHolder 			= Select the {0}
+#Placeholder			****************************************************************************************
+placeHolder 								= Enter the {0}
+cboPlaceHolder 								= Select the {0}
 
-#Title					********************************************
-
-
-#Label					********************************************
-lblEmailSecurity		= We'll never share your email with anyone else.
-lblForgotPassword		= Forgot Password
-
-lblEmail				= Email
-lblFirstName			= First Name
-lblLastName				= Last Name
-lblNewPassword 			= New Password
-lblPassword				= Password
-lblConfirmPassword 		= Confrim Password
-lblCurrentPassword 		= Current Password
+#Title					****************************************************************************************
 
 
-#Button					********************************************
-btnLogin				= Login
+#Label					****************************************************************************************
+lblEmailSecurity							= We'll never share your email with anyone else.
+lblForgotPassword							= Forgot Password
 
-#Entity & Model 		********************************************
-firstName				= First Name
-lastName				= Last Name
-email 					= Email
-password				= Password
-newPassword				= New Password
-confirmPassword			= Confirm Password
-currentPassword			= Current Password
+lblEmail									= Email
+lblFirstName								= First Name
+lblLastName									= Last Name
+lblNewPassword 								= New Password
+lblPassword									= Password
+lblConfirmPassword 							= Confrim Password
+lblCurrentPassword 							= Current Password
+
+
+#Button					****************************************************************************************
+btnLogin									= Login
+
+#Entity & Model 		****************************************************************************************
+firstName									= First Name
+lastName									= Last Name
+email 										= Email
+password									= Password
+newPassword									= New Password
+confirmPassword								= Confirm Password
+currentPassword								= Current Password
 
 
