commit : finished the initial password change service and pages.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -15,6 +15,7 @@ success.register.confirmation 				= Register Activation Successful!
 
 #error messages			****************************************************************************************
 confirmPassword.notMismatch					= Confirm Password does not mismatch.
+confirmNewPassword.notMismatch				= Confirm New Password does not mismatch.
 email.already.registered					= Email is already registered.
 email.invalid								= Invalid Email
 password.invalid							= Password must be 8 or more characters in length., Password must contain 1 or more uppercase characters., Password must contain 1 or more digit characters., Password must contain 1 or more special characters. 
@@ -39,7 +40,7 @@ lblNewPassword 								= New Password
 lblPassword									= Password
 lblConfirmPassword 							= Confrim Password
 lblCurrentPassword 							= Current Password
-
+lblConfirmNewPassword						= Confirm New Password
 
 #Button					****************************************************************************************
 btnLogin									= Login
@@ -52,5 +53,6 @@ password									= Password
 newPassword									= New Password
 confirmPassword								= Confirm Password
 currentPassword								= Current Password
+confirmNewPassword							= Confirm New Password
 
 
