commit : starting the forgot password and reset password.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/i18n/messages.properties
@@ -13,6 +13,8 @@ success.edit								= Successfully Edit.
 success.register							= Registeration successful. Cehck your email for confirmation and activation your account.
 success.register.confirmation 				= Register Activation Successful!
 
+success.password.request					= Check your e-mail for further instructions.
+success.forgot.password.reset				= Your password was successfully reset.
 #error messages			****************************************************************************************
 confirmPassword.notMismatch					= Confirm Password does not mismatch.
 confirmNewPassword.notMismatch				= Confirm New Password does not mismatch.
@@ -21,7 +23,7 @@ email.invalid								= Invalid Email
 password.invalid							= Password must be 8 or more characters in length., Password must contain 1 or more uppercase characters., Password must contain 1 or more digit characters., Password must contain 1 or more special characters. 
 
 error.register.confirmation					= Register Activation was expired. Please, register one more time!
-
+error.forgot.password.reset					= Password reset token was expired. Please, request one more time!
 #Placeholder			****************************************************************************************
 placeHolder 								= Enter the {0}
 cboPlaceHolder 								= Select the {0}
